github_data_collector/src/data/issue_comment/chuanyi_msexcel-builder.txt
msexcel-builder crashes when it is working with xmlbuilder versions greater than v10.1.1.
update Package.json with "xmlbuilder": "<=10.1.1" keyword for a quick fix.
Hi, the latest version here is 0.1.0 whereas NPM serves the old one. Please publish the new one and also please consider adding a tag for git releases.
Hello,

I am doing:
sheet1.set(col, row, 5);

5 is an example of a number. The excel file give me that 5 as a text and not a number


![image](https://user-images.githubusercontent.com/20766756/36904506-85ac60c0-1e7c-11e8-8f2b-fdee7948f2e3.png)


Any tips?
When i try to list a group of names in tree view,there will be no more solution available in msexcel-builder.
Can anyone say, the above mentioned option is available or not?
I try use msexcel-builder and got error:

```
/home/tln/www/nodejs/dreports/node_modules/msexcel-builder/lib/msexcel-builder.js:45
      if (!existsSync(target)) fs.mkdirSync(target, 0755);
                                                    ^^^^
SyntaxError: Octal literals are not allowed in strict mode.
    at Object.exports.runInThisContext (vm.js:78:16)
    at Module._compile (module.js:543:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:488:32)
    at tryModuleLoad (module.js:447:12)
    at Function.Module._load (module.js:439:3)
    at Module.require (module.js:498:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/home/tln/www/nodejs/dreports/toEmail.js:8:20)
    at Module._compile (module.js:571:32)
```
how I can resolve this error? I use node v4.3
Thanks!
how can we protect excel with password. do this module support it
Once the workbook is created . How to get instance of that workbook to read or manipulate data 
Hi,

When I download excel from the server, the downloaded file is corrupted. When I download the same excel from my local machine it is working fine.

![image](https://user-images.githubusercontent.com/8614111/29071404-107c23a2-7c61-11e7-93a9-ca0af4b0ce9a.png)

After clicking on Yes. It takes some time and this pop up comes up.

![image](https://user-images.githubusercontent.com/8614111/29071417-27264a74-7c61-11e7-8fe9-50dfbf3b71a1.png)

This is happening for Excel 2016 and working fine till Excel 2013.

Suggest what can be the issue with this.

Thanks in advance!
Hi! Thanks for the awesome lib!

Can i define some default settings for sheet? For example - custom font, text size or valign to entire sheet?

Thanks!
when I run  `npm install msexcel-builder` I get 

```
npm WARN deprecated graceful-fs@1.2.3: graceful-fs v3.0.0 and before will fail o
n node releases >= v7.0. Please update to graceful-fs@^4.0.0 as soon as possible
. Use 'npm ls graceful-fs' to find it in the tree.
C:\Users\user
`-- msexcel-builder@0.0.2

npm WARN enoent ENOENT: no such file or directory, open 'C:\Users\user
\package.json'
npm WARN user No description
npm WARN user  No repository field.
npm WARN user  No README data
npm WARN user  No license field.
```

When I run the `require('msexcel-builder')` throws error below
```
`module.js:327
    throw err;
    ^
```

```
Error: Cannot find module 'C:\Users\user\require('msexcel-builder');'
    at Function.Module._resolveFilename (module.js:325:15)
    at Function.Module._load (module.js:276:25)
    at Function.Module.runMain (module.js:441:10)
    at startup (node.js:139:18)
    at node.js:974:3`
```